added publications _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,9 @@ author: Malia Kao
 ###############################################
 
 navbar-links:
-  Author's home: "https://mlkao94697.github.io/"
+  Home: "https://mlkao94697.github.io/"
   Research: "research"
+  Publications: "publications"
   About Me: "aboutme"
  # Resources:
  #   - Beautiful Jekyll: "https://beautifuljekyll.com"
