--- a/_config.yml
+++ b/_config.yml
@@ -155,7 +155,7 @@ footer-hover-col: "#0085A1"
 #footer-img: "/assets/img/bgimage.png"
 #page-img: "/assets/img/Whitedwarfrockymaterial.png"
 #cover-img: ["/assets/img/Whitedwarfrockymaterial.png":"Polluted white dwarf, Credit: NASA/ESA, Joseph Olmsted (STScI)"]
-cover-img: "/assets/img/Whitedwarfrockymaterial.png"
+cover-img: "/assets/img/path.jpg"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
 #mobile-theme-col: "#0085A1"
